--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@auth/core": "^0.37.4",
     "@hono/auth-js": "^1.0.15",
     "@hono/node-server": "^1.13.7",
+    "dotenv": "^16.4.7",
     "hono": "^4.6.13"
   },
   "devDependencies": {
